[package]
name = "test-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7", features = ["full"] }
const-hex = "1.14"
crossbeam = "0.8"
# jsonrpsee = { version = "0.24", features = ["http-client"] }
radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", tag = "v0.1", features = ["json-rpc-client"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"